sna: Fix off-by-one in computation of width for inplace trapezoids

This lead to the dropping of the last pixel for small area trapezoids,
such as the right hand outline of buttons under ClearLooks.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=48320
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>